--- a/src/app/pages/main/navbar/navbar.component.html
+++ b/src/app/pages/main/navbar/navbar.component.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
@@ -19,106 +21,20 @@
             </button>
             <div id="navbarNav" class="collapse navbar-collapse">
                 <ul class="navbar-nav mx-auto">
-                    <!-- Megamenu-->
-                    <li class="nav-item dropdown megamenu">
-                        <a href="#" type="button" data-toggle="collapse" data-target="#dropdownMenuButton1"
-                            aria-controls="dropdownMenuButton1" aria-expanded="false" aria-label="Toggle navigation"
-                            class="nav-link dropdown-toggle font-weight-bold text-uppercase dropdown-toggle">Mega
-                            Menu</a>
-                        <div id="dropdownMenuButton1" class="dropdown-menu border-0 p-0 m-0">
-                            <div class="container">
-                                <div class="row bg-white rounded-0 m-0 shadow-sm">
-                                    <div class="col-lg-7 col-xl-8">
-                                        <div class="p-4">
-                                            <div class="row">
-                                                <div class="col-lg-6 mb-4">
-                                                    <h6 class="font-weight-bold text-uppercase">MegaMenu heading
-                                                    </h6>
-                                                    <ul class="list-unstyled">
-                                                        <li class="nav-item"><a href=""
-                                                                class="nav-link text-small pb-0">Unique Features</a>
-                                                        </li>
-                                                        <li class="nav-item"><a href=""
-                                                                class="nav-link text-small pb-0 ">Image
-                                                                Responsive</a></li>
-                                                        <li class="nav-item"><a href=""
-                                                                class="nav-link text-small pb-0 ">Auto Carousel</a>
-                                                        </li>
-                                                        <li class="nav-item"><a href=""
-                                                                class="nav-link text-small pb-0 ">Newsletter
-                                                                Form</a></li>
-                                                    </ul>
-                                                </div>
-                                                <div class="col-lg-6 mb-4">
-                                                    <h6 class="font-weight-bold text-uppercase">MegaMenu heading
-                                                    </h6>
-                                                    <ul class="list-unstyled">
-                                                        <li class="nav-item"><a href=""
-                                                                class="nav-link text-small pb-0 ">Unique
-                                                                Features</a></li>
-                                                        <li class="nav-item"><a href=""
-                                                                class="nav-link text-small pb-0 ">Image
-                                                                Responsive</a></li>
-                                                        <li class="nav-item"><a href=""
-                                                                class="nav-link text-small pb-0 ">Auto Carousel</a>
-                                                        </li>
-                                                        <li class="nav-item"><a href=""
-                                                                class="nav-link text-small pb-0 ">Newsletter
-                                                                Form</a></li>
-                                                    </ul>
-                                                </div>
-                                                <div class="col-lg-6 mb-4">
-                                                    <h6 class="font-weight-bold text-uppercase">MegaMenu heading
-                                                    </h6>
-                                                    <ul class="list-unstyled">
-                                                        <li class="nav-item"><a href=""
-                                                                class="nav-link text-small pb-0 ">Unique
-                                                                Features</a></li>
-                                                        <li class="nav-item"><a href=""
-                                                                class="nav-link text-small pb-0 ">Image
-                                                                Responsive</a></li>
-                                                        <li class="nav-item"><a href=""
-                                                                class="nav-link text-small pb-0 ">Auto Carousel</a>
-                                                        </li>
-                                                        <li class="nav-item"><a href=""
-                                                                class="nav-link text-small pb-0 ">Newsletter
-                                                                Form</a></li>
-                                                    </ul>
-                                                </div>
-                                                <div class="col-lg-6 mb-4">
-                                                    <h6 class="font-weight-bold text-uppercase">MegaMenu heading
-                                                    </h6>
-                                                    <ul class="list-unstyled">
-                                                        <li class="nav-item"><a href=""
-                                                                class="nav-link text-small pb-0 ">Unique
-                                                                Features</a></li>
-                                                        <li class="nav-item"><a href=""
-                                                                class="nav-link text-small pb-0 ">Image
-                                                                Responsive</a></li>
-                                                        <li class="nav-item"><a href=""
-                                                                class="nav-link text-small pb-0 ">Auto Carousel</a>
-                                                        </li>
-                                                        <li class="nav-item"><a href=""
-                                                                class="nav-link text-small pb-0 ">Newsletter
-                                                                Form</a></li>
-                                                    </ul>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-5 col-xl-4 px-0 d-none d-lg-block"
-                                        style="background: center center url(https://therichpost.com/wp-content/uploads/2021/11/mega.png)no-repeat; background-size: cover;">
-                                    </div><br>
-                                </div>
-                            </div>
-                        </div>
+                    <li class="nav-item"><a class="nav-link font-weight-bold text-uppercase">About</a></li>
+                    <li class="nav-item"><a class="nav-link font-weight-bold text-uppercase">Services</a>
                     </li>
-                    <li class="nav-item"><a href="" class="nav-link font-weight-bold text-uppercase">About</a></li>
-                    <li class="nav-item"><a href="" class="nav-link font-weight-bold text-uppercase">Services</a>
+                    <li class="nav-item"><a class="nav-link font-weight-bold text-uppercase">Contact</a>
                     </li>
-                    <li class="nav-item"><a href="" class="nav-link font-weight-bold text-uppercase">Contact</a>
-                    </li>
+
+                  
                 </ul>
+
+                <ul class="navbar-nav">
+                    <li class="bi bi-cart btnBuy" style="font-size: 1.5rem;"></li>
+                </ul>
+
+
             </div>
         </div>
     </nav>
