change update Login

--- a/src/app/pages/pre-auth/login/login.component.html
+++ b/src/app/pages/pre-auth/login/login.component.html
@@ -21,7 +21,7 @@
     <div class="container">
       <label class="close-btn fas fa-times"></label>
       <div class="text">
-        Login Form
+        Iniciar Sesión
       </div>
       <form #formLogin="ngForm" (submit)="onLogin()">
         <div class="data">
