--- a/src/app/pages/pre-auth/users/update-users/update-users.component.html
+++ b/src/app/pages/pre-auth/users/update-users/update-users.component.html
@@ -33,6 +33,14 @@
                                 </div>
                             </div>
 
+                            <div class="row justify-content-center">
+                                <div class="form-floating mb-3 col-6">
+                                    <input name="password" class="form-control" [(ngModel)]="us.password" #password="ngModel"
+                                        type="text" placeholder="Password" />
+                                    <label for="password">Contraseña</label>
+                                </div>
+                            </div>
+
                             <div class="row position-absolute fixed-bottom mb-2">
                                 <div class="col-md-6 d-grid justify-content-center">
                                     <button class="btn btn-primary btn-lg btn-login text-uppercase fw-bold col-12">
