--- a/src/app/pages/main/gallery/gallery.component.html
+++ b/src/app/pages/main/gallery/gallery.component.html
@@ -2,7 +2,7 @@
 
 <section class="seccion">
     <div class="container">
-        <h2><strong>Galeria</strong></h2>
+        <!-- <h2><strong>Galeria</strong></h2> -->
 
         <div class="col-12">
             <div class="row">
@@ -15,7 +15,7 @@
                     </pagination-controls>
                 </div>
 
-                <div class="col-md-4 mb-3"
+                <div class="col-md-4 mb-3" data-aos="flip-up"
                     *ngFor="let gallery of galeria | paginate: { itemsPerPage: 3, currentPage: page }">
                     <div class="card shadow-lg p-3 mb-5 bg-white rounded zoom">
                         <div class="card-header d-flex flex-column " style="height: 300px; width: 100%;">
@@ -40,38 +40,6 @@
 
                                     <div class="modal-body">
                                         <!-- Aqui se coloca lo adentro -->
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                                         <div class="row">
                                             <div class="col-12 text-right">
 
@@ -81,7 +49,7 @@
                                                 </pagination-controls>
                                             </div>
 
-                                            <div class="col-md-6 mb-3"
+                                            <div class="col-md-6 mb-3" data-aos="flip-up"
                                                 *ngFor="let gale of galerias | paginate: { itemsPerPage: 2, currentPage: pageModal }">
                                                 <div class="wp-block-column">
                                                     <div style="border:1px solid #f5f5f5;padding-top:15px;padding-right:0px;padding-bottom:0px;padding-left:15px;border-radius:12px;background-color:rgb(255, 255, 255);box-shadow:0px 0px 8px #343434"
@@ -141,45 +109,12 @@
                                                     </div>
                                                 </div>
                                             </div>
-
-
-
-
-
                                         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                                         <!-- Afuera -->
                                     </div>
                                 </ng-template>
 
                                 <!-- Fin Modal -->
-
-
-
-
 
                             </div>
                         </div>
