--- a/src/app/pages/pre-auth/login/login.component.html
+++ b/src/app/pages/pre-auth/login/login.component.html
@@ -10,40 +10,44 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
     crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <style href="login.component.css"></style>
 </head>
 
 <body>
-  <div class="center">
-    <!-- <input type="checkbox" id="show">
+  <!-- <input type="checkbox" id="show">
     <label for="show" class="show-btn">View Form</label> -->
-    <div class="container">
-      <label class="close-btn fas fa-times"></label>
-      <div class="text">
-        Iniciar Sesión
-      </div>
-      <form #formLogin="ngForm" (submit)="onLogin()">
-        <div class="data">
-          <label>Email</label>
-          <input [(ngModel)]="email" type="email" id="email" name="email" required>
+  <div class="container">
+    <div class="padre">
+      <div class="hijo" data-aos="flip-down">
+        <label class="close-btn fas fa-times"></label>
+        <div class="text">
+          Iniciar Sesión
         </div>
-        <div class="data">
-          <label>Contraseña</label>
-          <input [(ngModel)]="password" type="password" id="password" name="password" required>
-        </div>
-        <!-- <div class="forgot-pass">
+        <form #formLogin="ngForm" (submit)="onLogin()">
+          <div class="data">
+            <label>Email</label>
+            <input [(ngModel)]="email" type="email" id="email" name="email" required>
+          </div>
+          <div class="data">
+            <label>Contraseña</label>
+            <input [(ngModel)]="password" type="password" id="password" name="password" required>
+          </div>
+          <!-- <div class="forgot-pass">
           <a href="#">Forgot Password?</a>
         </div> -->
-        <div class="btn">
-          <div class="inner"></div>
-          <button type="submit">login</button>
-        </div>
-        <div class="signup-link">
-          Not a member? <a (click)="registro()">Signup now</a>
-        </div>
-      </form>
+          <div class="btn">
+            <div class="inner"></div>
+            <button type="submit">login</button>
+          </div>
+          <div class="signup-link">
+            Not a member? <a (click)="registro()">Signup now</a>
+          </div>
+        </form>
+      </div>
     </div>
+
   </div>
 </body>
 
