--- a/src/app/pages/pre-auth/users/regis-login/regis-login.component.html
+++ b/src/app/pages/pre-auth/users/regis-login/regis-login.component.html
@@ -15,28 +15,32 @@
 </head>
 
 <body>
-  <div class="center">
-    <div class="container">
-      <label class="close-btn fas fa-times"></label>
-      <div class="text"> Registrate </div>
-      <form #formLogin="ngForm" (submit)="onAddUser()">
-        <div class="data">
-          <label>Email</label>
-          <input [(ngModel)]="email" type="email" id="email" name="email" required>
-        </div>
-        <div class="data">
-          <label>Contraseña</label>
-          <input [(ngModel)]="password" type="password" id="password" name="password" required>
-        </div>
-        <div class="btn">
-          <div class="inner"></div>
-          <button type="submit">Aceptar</button>
-        </div>
-        <div class="btn2">
-          <div class="inner2"></div>
-          <button (click)="devolver()">Regresar</button>
-        </div>
-      </form>
+  <div class="container">
+    <div class="padre">
+      <div class="hijo" data-aos="flip-left"
+      data-aos-easing="ease-out-cubic"
+      data-aos-duration="2000">
+        <label class="close-btn fas fa-times"></label>
+        <div class="text"> Registrate </div>
+        <form #formLogin="ngForm" (submit)="onAddUser()">
+          <div class="data">
+            <label>Email</label>
+            <input [(ngModel)]="email" type="email" id="email" name="email" required>
+          </div>
+          <div class="data">
+            <label>Contraseña</label>
+            <input [(ngModel)]="password" type="password" id="password" name="password" required>
+          </div>
+          <div class="btn">
+            <div class="inner"></div>
+            <button type="submit">Aceptar</button>
+          </div>
+          <div class="btn2">
+            <div class="inner2"></div>
+            <button (click)="devolver()">Regresar</button>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 </body>
