--- a/src/app/pages/pre-auth/users/update-users/update-users.component.html
+++ b/src/app/pages/pre-auth/users/update-users/update-users.component.html
@@ -21,7 +21,7 @@
                 <div class="m-0 vh-100 row justify-content-center align-items-center">
                     <div class="card-body p-4 p-sm-7">
                         <div class="card-title text-center mb-3 fw-bolder display-5">
-                            <label class="text-danger">Update User</label>
+                            <label class="text-danger">Actualizar</label>
                         </div>
 
                         <form (submit)="onUpdateUser(us.idDocument, us.id, us)">
@@ -35,8 +35,8 @@
 
                             <div class="row justify-content-center">
                                 <div class="form-floating mb-3 col-6">
-                                    <input name="password" class="form-control" [(ngModel)]="us.password" #password="ngModel"
-                                        type="text" placeholder="Password" />
+                                    <input name="password" class="form-control" [(ngModel)]="us.password"
+                                        #password="ngModel" type="text" placeholder="Password" />
                                     <label for="password">Contraseña</label>
                                 </div>
                             </div>
